src/objects/c2g__codaCurrencyRevaluation__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrencyrevaluation</customHelpPage>
    <description>Stores the master details related to a currency revaluation.</description>
    <fields>
        <fullName>c2g__Analysis__c</fullName>
        <label>Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Detail Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary Level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__BreakdownByStandardAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your transaction line items for the gains and losses GLA will be broken down by standard analysis fields (Account, Product, Bank Account, Tax Code).</description>
        <label>Standard Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BreakdownBySubAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your revaluation summary and transaction line items for the gains and losses GLA will be broken down by custom sub-analysis fields.</description>
        <label>Sub-Analysis Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CancelPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Cancel Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DimensionalAnalysis__c</fullName>
        <label>Dimensional Analysis On Lines</label>
        <picklist>
            <picklistValues>
                <fullName>Copy from Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter Dimensions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DualExchangeRate__c</fullName>
        <label>Dual Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Dual Value</label>
        <summarizedField>c2g__codaCurrencyRevaluationSummary__c.c2g__DualValue__c</summarizedField>
        <summaryForeignKey>c2g__codaCurrencyRevaluationSummary__c.c2g__CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorListView__c</fullName>
        <label>Error</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorText__c</fullName>
        <label>Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeRevaluedLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should previously revalued lines be excluded from selection by this revaluation or should they cause the revaluation to fail?</description>
        <label>Exclude Revalued Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GroupDisplayName__c</fullName>
        <description>The currency revaluation group display name.</description>
        <formula>c2g__RevalGroup__r.c2g__DisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeExchangeRate__c</fullName>
        <label>Document Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Home Value</label>
        <summarizedField>c2g__codaCurrencyRevaluationSummary__c.c2g__HomeValue__c</summarizedField>
        <summaryForeignKey>c2g__codaCurrencyRevaluationSummary__c.c2g__CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Locks__c</fullName>
        <description>The locking object ID used to protect updates to the owning currency revaluation field on Transaction lines.</description>
        <label>Locks</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period From</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period To</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Period To)</relationshipLabel>
        <relationshipName>CurrencyRevaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PostingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posting Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Posting Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RevalGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Our currency revaluation group.</description>
        <label>Group</label>
        <referenceTo>c2g__codaCurrencyRevaluationGroup__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>RevalGroupMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RevaluationType__c</fullName>
        <label>Revaluation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ReversalPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reversal Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Reversal Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduledTime__c</fullName>
        <formula>c2g__RevalGroup__r.c2g__ScheduledTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Generating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generation Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posting Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceling Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnrealizedGainsLossesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unrealized Gains/Losses GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Currency Revaluation</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaCurrencyRevaluation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__RevaluationType__c</columns>
        <columns>c2g__DocumentCurrency__c</columns>
        <columns>c2g__HomeExchangeRate__c</columns>
        <columns>c2g__DualExchangeRate__c</columns>
        <columns>c2g__PostingPeriod__c</columns>
        <columns>c2g__ReversalPeriod__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__RevalGroup__c</columns>
        <columns>c2g__GroupDisplayName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRV{000000}</displayFormat>
        <label>Currency Revaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>